Fix: fix heart,modal z-index and container margin

--- a/HODU_project/css/heart.css
+++ b/HODU_project/css/heart.css
@@ -4,7 +4,7 @@
     background-color: red;
     position: absolute;
     animation: moveUp 2s linear forwards;
-
+    z-index: 10;
 }
 
 .heart:before,
